# cpp-template

./: .gitignore  .gitpod.yml  CMakeLists.txt  CMakePresets.json  LICENSE  README.MD  vcpkg.json
.github/workflows/: hosted-ninja-vcpkg_submod.yml
builds/ninja-multi-vcpkg/: CMakeCache.txt
src/: CMakeLists.txt  code.cpp
src/tests/: CMakeLists.txt  src_test.cpp
